--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Necessary codition</title>
+    <title>Necessary condition</title>
     <style>
       body {
         font-family: Arial;
@@ -25,82 +25,120 @@
         border: 1px solid #aaa;
         border-radius: 8px;
       }
+      button {
+        margin-right: 5px;
+      }
     </style>
   </head>
   <body>
     <h2>Necessary condition</h2>
 
     <input id="taskInput" type="text" placeholder="Tên công việc" />
-    <button onclick="addTask()">Thêm công việc</button>
+    <button id="addBtn">Thêm công việc</button>
 
     <div id="taskList"></div>
 
     <script>
       let tasks = [];
 
-      function addTask() {
-        const name = document.getElementById("taskInput").value.trim();
+      const input = document.getElementById("taskInput");
+      const addBtn = document.getElementById("addBtn");
+      const list = document.getElementById("taskList");
+
+      // Load dữ liệu từ localStorage khi mở trang
+      window.onload = () => {
+        const saved = localStorage.getItem("tasks");
+        if (saved) tasks = JSON.parse(saved);
+        render();
+      };
+
+      function saveTasks() {
+        localStorage.setItem("tasks", JSON.stringify(tasks));
+      }
+
+      addBtn.addEventListener("click", () => {
+        const name = input.value.trim();
         if (!name) return;
 
-        const task = {
+        tasks.push({
           id: Date.now(),
           name,
           days: { day1: "", day2: "", day3: "", day4: "" },
-        };
+        });
+        input.value = "";
+        saveTasks();
+        render();
+      });
 
-        tasks.push(task);
-        document.getElementById("taskInput").value = "";
+      function editTask(id) {
+        const task = tasks.find((t) => t.id === id);
+        const newName = prompt("Nhập tên mới:", task.name);
+        if (!newName) return;
+        task.name = newName;
+        saveTasks();
         render();
       }
 
       function deleteTask(id) {
         tasks = tasks.filter((t) => t.id !== id);
-        render();
-      }
-
-      function editTask(id) {
-        const newName = prompt("Nhập tên mới:");
-        if (!newName) return;
-        const t = tasks.find((x) => x.id === id);
-        t.name = newName;
+        saveTasks();
         render();
       }
 
       function updateDay(id, day, value) {
-        const t = tasks.find((x) => x.id === id);
-        t.days[day] = value;
+        const task = tasks.find((t) => t.id === id);
+        task.days[day] = value;
+        saveTasks();
       }
 
       function render() {
-        const list = document.getElementById("taskList");
         list.innerHTML = "";
 
-        tasks.forEach((t) => {
+        tasks.forEach((task) => {
           const div = document.createElement("div");
           div.className = "task";
 
-          div.innerHTML = `
-          <h3>${t.name}</h3>
-          <button onclick="editTask(${t.id})">Sửa</button>
-          <button onclick="deleteTask(${t.id})">Xóa</button>
+          // Tiêu đề và nút
+          const title = document.createElement("h3");
+          title.textContent = task.name;
+          div.appendChild(title);
 
-          <table style="margin-top: 10px;">
-            <tr>
-              <th>Ngày 1</th>
-              <th>Ngày 2</th>
-              <th>Ngày 3</th>
-              <th>Ngày 4</th>
-            </tr>
-            <tr>
-              <td><input value="${t.days.day1}" oninput="updateDay(${t.id}, 'day1', this.value)"></td>
-              <td><input value="${t.days.day2}" oninput="updateDay(${t.id}, 'day2', this.value)"></td>
-              <td><input value="${t.days.day3}" oninput="updateDay(${t.id}, 'day3', this.value)"></td>
-              <td><input value="${t.days.day4}" oninput="updateDay(${t.id}, 'day4', this.value)"></td>
-              <td><input value="${t.days.day5}" oninput="updateDay(${t.id}, 'day4', this.value)"></td>
-            </tr>
-          </table>
-        `;
+          const btnEdit = document.createElement("button");
+          btnEdit.textContent = "Sửa";
+          btnEdit.onclick = () => editTask(task.id);
+          div.appendChild(btnEdit);
 
+          const btnDelete = document.createElement("button");
+          btnDelete.textContent = "Xóa";
+          btnDelete.onclick = () => deleteTask(task.id);
+          div.appendChild(btnDelete);
+
+          // Table
+          const table = document.createElement("table");
+          table.style.marginTop = "10px";
+
+          const header = document.createElement("tr");
+          ["Ngày 1", "Ngày 2", "Ngày 3", "Ngày 4"].forEach((d) => {
+            const th = document.createElement("th");
+            th.textContent = d;
+            header.appendChild(th);
+          });
+          table.appendChild(header);
+
+          const row = document.createElement("tr");
+          ["day1", "day2", "day3", "day4"].forEach((dayKey) => {
+            const td = document.createElement("td");
+            const inp = document.createElement("input");
+            inp.value = task.days[dayKey];
+            inp.addEventListener("input", (e) =>
+              updateDay(task.id, dayKey, e.target.value)
+            );
+            td.appendChild(inp);
+            row.appendChild(td);
+          });
+          table.appendChild(row);
+
+          div.appendChild(table);
           list.appendChild(div);
         });
       }
