--- a/index.html
+++ b/index.html
@@ -1,147 +1,68 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Necessary condition</title>
-    <style>
-      body {
-        font-family: Arial;
-        padding: 20px;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid #000;
-        border-collapse: collapse;
-      }
-      th,
-      td {
-        padding: 8px;
-      }
-      .task {
-        margin-bottom: 20px;
-        padding: 10px;
-        border: 1px solid #aaa;
-        border-radius: 8px;
-      }
-      button {
-        margin-right: 5px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <title>To-do-list</title>
   </head>
   <body>
-    <h2>Necessary condition</h2>
-
-    <input id="taskInput" type="text" placeholder="Tên công việc" />
-    <button id="addBtn">Thêm công việc</button>
-
-    <div id="taskList"></div>
-
-    <script>
-      let tasks = [];
-
-      const input = document.getElementById("taskInput");
-      const addBtn = document.getElementById("addBtn");
-      const list = document.getElementById("taskList");
-
-      // Load dữ liệu từ localStorage khi mở trang
-      window.onload = () => {
-        const saved = localStorage.getItem("tasks");
-        if (saved) tasks = JSON.parse(saved);
-        render();
-      };
-
-      function saveTasks() {
-        localStorage.setItem("tasks", JSON.stringify(tasks));
-      }
-
-      addBtn.addEventListener("click", () => {
-        const name = input.value.trim();
-        if (!name) return;
-
-        tasks.push({
-          id: Date.now(),
-          name,
-          days: { day1: "", day2: "", day3: "", day4: "" },
-        });
-        input.value = "";
-        saveTasks();
-        render();
-      });
-
-      function editTask(id) {
-        const task = tasks.find((t) => t.id === id);
-        const newName = prompt("Nhập tên mới:", task.name);
-        if (!newName) return;
-        task.name = newName;
-        saveTasks();
-        render();
-      }
-
-      function deleteTask(id) {
-        tasks = tasks.filter((t) => t.id !== id);
-        saveTasks();
-        render();
-      }
-
-      function updateDay(id, day, value) {
-        const task = tasks.find((t) => t.id === id);
-        task.days[day] = value;
-        saveTasks();
-      }
-
-      function render() {
-        list.innerHTML = "";
-
-        tasks.forEach((task) => {
-          const div = document.createElement("div");
-          div.className = "task";
-
-          // Tiêu đề và nút
-          const title = document.createElement("h3");
-          title.textContent = task.name;
-          div.appendChild(title);
-
-          const btnEdit = document.createElement("button");
-          btnEdit.textContent = "Sửa";
-          btnEdit.onclick = () => editTask(task.id);
-          div.appendChild(btnEdit);
-
-          const btnDelete = document.createElement("button");
-          btnDelete.textContent = "Xóa";
-          btnDelete.onclick = () => deleteTask(task.id);
-          div.appendChild(btnDelete);
-
-          // Table
-          const table = document.createElement("table");
-          table.style.marginTop = "10px";
-
-          const header = document.createElement("tr");
-          ["Ngày 1", "Ngày 2", "Ngày 3", "Ngày 4"].forEach((d) => {
-            const th = document.createElement("th");
-            th.textContent = d;
-            header.appendChild(th);
-          });
-          table.appendChild(header);
-
-          const row = document.createElement("tr");
-          ["day1", "day2", "day3", "day4"].forEach((dayKey) => {
-            const td = document.createElement("td");
-            const inp = document.createElement("input");
-            inp.value = task.days[dayKey];
-            inp.addEventListener("input", (e) =>
-              updateDay(task.id, dayKey, e.target.value)
-            );
-            td.appendChild(inp);
-            row.appendChild(td);
-          });
-          table.appendChild(row);
-
-          div.appendChild(table);
-          list.appendChild(div);
-        });
-      }
-    </script>
+    <h1>To-Do-List</h1>
+    <section>
+      <h2>1. Danh sách những công việc quan trọng(có giá trị lâu dài)</h2>
+      <ul id="ul1"></ul>
+      <input
+        id="input1"
+        type="text"
+        placeholder="Nhập công việc muốn thêm vào đây"
+      />
+      <br />
+      <button id="add1">Add</button>
+    </section>
+    <section>
+      <h2>2 Danh sách các công việc cấp bách</h2>
+      <ul id="ul2"></ul>
+      <input
+        type="text"
+        id="input2"
+        placeholder="Nhập công việc muốn thêm vào đây"
+      />
+      <br />
+      <button id="add2">Add</button>
+    </section>
+    <section>
+      <h2>3 Danh sách các công việc ngắn hạn</h2>
+      <ul id="ul3"></ul>
+      <input
+        type="text"
+        id="input3"
+        placeholder="Nhập công việc muốn thêm vào đây"
+      />
+      <br />
+      <button id="add3">Add</button>
+    </section>
+    <section>
+      <h2>4 Danh sách các công việc trung hạn</h2>
+      <ul id="ul4"></ul>
+      <input
+        type="text"
+        id="input4"
+        placeholder="Nhập công việc muốn thêm vào đây"
+      />
+      <br />
+      <button id="add4">Add</button>
+    </section>
+    <section>
+      <h2>5 Danh sách các công việc dài hạn</h2>
+      <ul id="ul5"></ul>
+      <input
+        type="text"
+        id="input5"
+        placeholder="Nhập công việc muốn thêm vào đây"
+      />
+      <br />
+      <button id="add5">Add</button>
+    </section>
+    <script src="main.js"></script>
   </body>
 </html>
